--- a/config.yml
+++ b/config.yml
@@ -6,31 +6,25 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://loki:3100/loki/api/v1/push
+  - url: http://muirwoods-loki:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: system
+- job_name: muirwoods_gitlab_access
   static_configs:
   - targets:
       - localhost
     labels:
-      job: varlogs
-      __path__: /var/log/*log
-- job_name: gitlab_access
-  static_configs:
-  - targets:
-      - localhost
-    labels:
-      job: gitlab_access
+      job: muirwoods_gitlab_access
+      hostname: eve
       __path__: /tmp/nginx_gitlab/gitlab_access.log
   pipeline_stages:
   - match:
-      selector: '{job="gitlab_access"}'
+      selector: '{job="muirwoods_gitlab_access"}'
       stages:
         - drop:
             expression: '/lfs/'
   - match:
-      selector: '{job="gitlab_access"}'
+      selector: '{job="muirwoods_gitlab_access"}'
       stages:
         - drop:
             expression: '/gitlab-lfs/'
@@ -50,7 +44,7 @@ scrape_configs:
       format: 02/Jan/2006:15:04:05 +0000
   - regex:
       source: path
-      expression: '/gitlab/(?P<group>[^/]+)/(?P<repo>[^/]+)\.git'
+      expression: '/repos/(?P<group>[^/]+)/(?P<repo>[^/]+)\.git'
   - labels:
       group:
       repo:
