--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,25 @@ networks:
   loki:
 
 services:
-  loki:
+  muirwoods-loki:
     image: grafana/loki:2.9.2
     ports:
-      - "3100:3100"
+      - "33100:3100"
     command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - ${HOME}/data/loki:/loki
     networks:
       - loki
-
-  promtail:
+  muirwoods-repo-log-collector-promtail:
     image: grafana/promtail:2.9.2
     volumes:
       - /var/log:/var/log
-      - /Users/sunjoo/data/gitlab_home/logs/nginx:/tmp/nginx_gitlab
+      - /home/loki_deployment/data/gitlab_home/logs/nginx:/tmp/nginx_gitlab
       - ./config.yml:/etc/promtail/config.yml
-
     command: -config.file=/etc/promtail/config.yml
     networks:
       - loki
-  grafana:
+  muirwoods-grafana:
     environment:
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_AUTH_ANONYMOUS_ENABLED=true
@@ -39,7 +39,7 @@ services:
           type: loki
           access: proxy
           orgId: 1
-          url: http://loki:3100
+          url: http://muirwoods-loki:3100
           basicAuth: false
           isDefault: true
           version: 1
@@ -48,8 +48,9 @@ services:
         /run.sh
     image: grafana/grafana:latest
     ports:
-      - "3000:3000"
+      - "33000:3000"
     volumes:
       - ${HOME}/data/grafana:/var/lib/grafana
+      - ./grafana.ini:/etc/grafana/grafana.ini
     networks:
       - loki
